Fixed schedule nav link not scrolling down on mobile by adding a duplicate nav link that only appears on mobile with a different href id

--- a/src/css/additional.css
+++ b/src/css/additional.css
@@ -511,7 +511,7 @@ tr:hover {
     padding-bottom: 0.75rem;
 }
 
-#schedule2 {
+.scheduleMobile {
     display: none;
 }
 #fixed-width {
@@ -520,10 +520,10 @@ tr:hover {
     flex: 0 0 100%!important;
     max-width: 100%!important; }
 @media (max-width: 991.5px) {
-    #schedule2 {
+    .scheduleMobile {
         display: block;
     }
-    #schedule {
+    .schedule {
         display: none;
     }
 }
